test/invalid/new-return.js
function Constr(x) { this.bla = x; return 2;  }
var constr = new Constr(2);
constr.another = 2;

